--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Sedona</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="/css/mobile-style.css">
 </head>
 <body>
-
+  <header class="main-header">
+    <nav class="nav">
+      <ul class="nav-list">
+        <li><a href="#" class="nav-list__item">главная</a></li>
+        <li><a href="#" class="nav-list__item">фото и видео</a></li>
+        <li><a href="#" class="nav-list__item">форма отзыва</a></li>
+        <li><a href="#" class="nav-list__item">html academy</a></li>
+      </ul>
+    </nav>
+    <div class="main-header__logo">
+      <img src="img/logo-mobile.png" alt="Логотип Седона">
+    </div>
+  </header>
 </body>
 </html>
