Сверстан блок преимуществ Седоны. Исправлена ошибка в скрипте. (не исчезал гамбургер в меню)

--- a/index.html
+++ b/index.html
@@ -34,6 +34,72 @@
     <div class="intro">
       <img class="intro__title" width="282" height="214" src="img/welcome-mobile.png" alt="welcome to sedona">
     </div>
+    <section class="reasons">
+      <div class="wrapper">
+        <div class="reasons__header">
+          <h2 class="reasons__title">
+             СЕДОНА — небольшой <br>
+             городок в АРИЗОНЕ, заслуживающий большего!
+           </h2>
+          <p class="reasons__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        </div>
+      </div>
+    </section>
+    <section class="features">
+      <div class="feature__item">
+        <div class="wrapper">
+          <h2 class="feature__title">настоящий городок</h2>
+          <p class="feature__number">— №1 —</p>
+          <p class="feature__text">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+        </div>
+      </div>
+      <div class="feature__image--city"></div>
+      <div class="wrapper">
+        <ul class="feature__list">
+          <li class="feature__list-item list__item-home">
+            <h2 class="feature__list-title">жилье</h2>
+            <p class="feature__list-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          </li>
+          <li class="feature__list-item list__item-gift">
+            <h2 class="feature__list-title">сувениры</h2>
+            <p class="feature__list-text">Не только китайского, но и местного производства!</p>
+          </li>
+          <li class="feature__list-item list__item-food">
+            <h2 class="feature__list-title">еда</h2>
+            <p class="feature__list-text">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
+          </li>
+        </ul>
+      </div>
+      <div class="feature__item item-bridge">
+        <div class="wrapper">
+          <h2 class="feature__title">там есть мост дьявола</h2>
+          <p class="feature__number">— №2 —</p>
+          <p class="feature__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+        </div>
+      </div>
+      <div class="feature__image--bridge"></div>
+      <div class="feature__item item-small-square">
+        <div class="wrapper">
+          <h2 class="feature__title">небольшая площадь</h2>
+          <p class="feature__number">— №3 —</p>
+          <p class="feature__text">ВСЕ интересные места находятся очень близко</p>
+        </div>
+      </div>
+      <div class="feature__item item-butiful-road">
+        <div class="wrapper">
+          <h2 class="feature__title">красивая дорога</h2>
+          <p class="feature__number">— №4 —</p>
+          <p class="feature__text">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!</p>
+        </div>
+      </div>
+      <div class="feature__item item-few-people">
+        <div class="wrapper">
+          <h2 class="feature__title">мало туристов</h2>
+          <p class="feature__number">— №5 —</p>
+          <p class="feature__text">Большинство едет в гранд каньон и толпится там</p>
+        </div>
+      </div>
+    </section>
   </main>
   <script type="text/javascript" src="js/script.js"></script>
 </body>
