--- a/index.html
+++ b/index.html
@@ -100,6 +100,29 @@
         </div>
       </div>
     </section>
+    <section class="search">
+      <div class="wrapper">
+        <h2 class="search__title">заинтересовались?</h2>
+        <p class="search__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <a href="#" class="search__btn">найти гостиницу</a>
+      </div>
+    </section>
+    <section class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1994959.3933900578!2d-112.37913913130355!3d34.79403875809311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1530967972996" width="320" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </section>
+    <footer class="main-footer">
+      <div class="wrapper">
+        <h2 class="footer__title">#visitSEDONA</h2>
+        <ul class="footer__social">
+          <li class="social__item twitter"><a href="#"></a></li>
+          <li class="social__item fb"><a href="#"></a></li>
+          <li class="social__item youtube"><a href="#"></a></li>
+        </ul>
+        <div class="footer__copyright">
+          <p>разработано</p>
+        </div>
+      </div>
+    </footer>
   </main>
   <script type="text/javascript" src="js/script.js"></script>
 </body>
