Сверстано меню планшетной версии

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Sedona</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/mobile-style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <header class="main-header">
@@ -110,20 +110,20 @@
     <section class="map">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1994959.3933900578!2d-112.37913913130355!3d34.79403875809311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1530967972996" width="320" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
     </section>
-    <footer class="main-footer">
-      <div class="wrapper">
-        <h2 class="footer__title">#visitSEDONA</h2>
-        <ul class="footer__social">
-          <li class="social__item twitter"><a href="#"></a></li>
-          <li class="social__item fb"><a href="#"></a></li>
-          <li class="social__item youtube"><a href="#"></a></li>
-        </ul>
-        <div class="footer__copyright">
-          <p>разработано</p>
-        </div>
-      </div>
-    </footer>
   </main>
+  <footer class="main-footer">
+    <div class="wrapper">
+      <h2 class="footer__title">#visitSEDONA</h2>
+      <ul class="footer__social">
+        <li class="social__item twitter"><a href="#"></a></li>
+        <li class="social__item fb"><a href="#"></a></li>
+        <li class="social__item youtube"><a href="#"></a></li>
+      </ul>
+      <div class="footer__copyright">
+        <p>разработано</p>
+      </div>
+    </div>
+  </footer>
   <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
